[package]
name = "kubempf"
version = "0.10.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
kube = { version = "0.88.1", default-features = false, features = ["client", "ws", "rustls-tls"] }
k8s-openapi = { version = "0.21.0", default-features = false, features = ["v1_26"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
futures = "0.3.30"
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.111"
clap = "4.4.18"

[package.metadata.cross.build]
xargo = false
build-std = false
default-target = "x86_64-unknown-linux-gnu"

#[package.metadata.cross.target.x86_64-unknown-linux-gnu]
#[package.metadata.cross.target.x86_64-pc-windows-gnu]

