[package]
name = "kubempf"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
kube = { version = "0.90.0", default-features = false, features = ["client", "ws", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.21.1", default-features = false, features = ["v1_26"] }
anyhow = "1.0.82"
thiserror = "1.0.59"
futures = "0.3.30"
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.115"
clap = { version = "4.5.4", features = ["derive"] }
byte-unit = "5.1.4"
rand = "0.8.5"

[package.metadata.cross.build]
xargo = false
build-std = false
default-target = "x86_64-unknown-linux-gnu"

#[package.metadata.cross.target.x86_64-unknown-linux-gnu]
#[package.metadata.cross.target.x86_64-pc-windows-gnu]

